# form-sensor

./: README.md
.kiro/specs/semantic-sensor/: design.md  requirements.md  tasks.md
sensor-backend/: .env.example  .gitignore  Makefile  README.md  activate.sh  main.py  pyproject.toml  requirements.txt  run.sh
sensor-backend/app/: models.py  schemas.py  services.py  validators.py
sensor-ui/: package.json  pnpm-lock.yaml
sensor-ui/src/app-main/demo-examples/text-editor/: index.vue
sensor-ui/src/app-main/form-sensor/: README.md  field-list.vue  field-verify.vue  index.vue  route-config.ts
sensor-ui/src/app-main/incident/: activity-index.vue  incident-init.vue  incident-severity.md  incident-type.ts  route-config.ts  sample-data.ts
sensor-ui/src/app-main/playbook/: route-config.ts
sensor-ui/src/app-main/playbook/snap-jots/a-recording/: recording-store.ts
sensor-ui/src/app-main/playbook/snap-jots/new-recording/: index.vue
sensor-ui/src/app-main/playbook/snap-jots/new-recording/recording-init/: index.vue  input-cam-device.vue  input-display-stream.vue  input-mic-device.vue
sensor-ui/src/app-main/playbook/snap-jots/new-recording/recording-runtime/: index.vue  screen-recorder.ts  use-recorder.ts
sensor-ui/src/app-main/recorder-rtc/: snap-recorder.ts
sensor-ui/src/boot/: register-component.ts  register-utils.ts
sensor-ui/src/commons/components/layouts/: a-page.vue
sensor-ui/src/commons/components/layouts/activity/: activity-container.vue
sensor-ui/src/pages/: SemanticSensor.vue
sensor-ui/src/router/: routes.ts
